@@ -20,4 +20,5 @@ package org.apache.cassandra.service;
 public interface IReadCommand
 {
     public String getKeyspace();
+    public long getTimeout();
 }
